# axenix-bank-data-storage

./: .gitignore
src/backend/external_api/: Dockerfile  alembic.ini  entrypoint.sh  exapmle.env  pyproject.toml  requirements.dev.txt  requirements.txt
src/backend/external_api/api/: main.py
src/backend/external_api/api/routers/: __init__.py  accept_report.py  create_report.py  fact_search.py  get_user_external.py  get_user_internal.py  new_user.py  upload_database.py
src/backend/external_api/app/schemas/: accept_report_schema.py  create_report_schemas.py  fact_search_schemas.py  get_user_external_reports_schemas.py  get_user_internal_reports_schemas.py  new_user_schemas.py  response.py
src/backend/external_api/app/service/: _base_service.py  builder_report.py  elasticsearch.py  external_report.py  internal_report.py  kafka_producer.py  s3.py  uploade_database.py
src/backend/external_api/core/: config.py  database.py  elastic_config.py  kafka_config.py
src/backend/external_api/core/models/: __init__.py  _base.py  external_report.py  internal_report.py  user.py
src/backend/external_api/migrations/: env.py
src/backend/external_api/migrations/versions/: 44e393d64e71_.py  b30ad701bfee_.py
src/backend/external_api/repository/: _base_sqlalchemy_repository.py  external_report.py  internal_report.py
src/backend/user/: Dockerfile  pyproject.toml  requirements.txt
src/backend/user/api/: main.py
src/backend/user/api/routers/: __init__.py  user.py
src/backend/user/app/schemas/: response.py  user.py
src/backend/user/core/: config.py
src/backend/user/repository/: user.py
src/backend/worker/: Dockerfile  alembic.ini  entrypoint.sh  example.env  main.py  pyproject.toml  requirements.txt
src/backend/worker/consumer/: main.py
src/backend/worker/migrations/: env.py
src/backend/worker/service/: elastic_service.py  init_service.py
(+91 files in other folders)
