[project]
name = "external-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "click>=8.1.7",
    "confluent-kafka>=2.6.1",
    "elasticsearch==7.17",
    "email-validator>=2.2.0",
    "fastapi>=0.115.5",
    "jwt>=1.3.1",
    "minio>=7.2.12",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.10.2",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.18",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
    "xlsxwriter>=3.2.0",
]
