[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "confluent-kafka>=2.6.1",
    "elasticsearch==7.17.0",
    "fsspec>=2024.10.0",
    "minio>=7.2.12",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
]
